--- a/Lecture12-groupby_and_pivot.ipynb
+++ b/Lecture12-groupby_and_pivot.ipynb
@@ -2647,7 +2647,7 @@
     }
    ],
    "source": [
-    "# the following statement will give you the relative frequency of `work_types` over `locations`\n",
+    "# the following statement will give you the relative frequency of `work_types` over `locations` all frequencies add up to 100%\n",
     "pd.crosstab(index=itinery_df['work_types'], columns=itinery_df['locations'], normalize='all').round(3)"
    ]
   },
@@ -2751,7 +2751,7 @@
     }
    ],
    "source": [
-    "# the following statement will give you the relative frequency of `work_types` over `locations` row-wise\n",
+    "# the following statement will give you the relative frequency of `work_types` over `locations` row-wise add up to 100%\n",
     "pd.crosstab(index=itinery_df['work_types'], columns=itinery_df['locations'], normalize='index').round(3)"
    ]
   },
@@ -2855,7 +2855,7 @@
     }
    ],
    "source": [
-    "# the following statement will give you the relative frequency of `work_types` over `locations` column-wise\n",
+    "# the following statement will give you the relative frequency of `work_types` over `locations` column-wise add up to 100%\n",
     "pd.crosstab(index=itinery_df['work_types'], columns=itinery_df['locations'], normalize='columns').round(3)"
    ]
   },
