--- a/Lecture12-groupby_and_pivot.ipynb
+++ b/Lecture12-groupby_and_pivot.ipynb
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1979,53 +1979,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1645</td>\n",
+       "      <td>555</td>\n",
        "      <td>lecture</td>\n",
-       "      <td>Madrid, Spain</td>\n",
-       "      <td>18.49</td>\n",
+       "      <td>Paris, France</td>\n",
+       "      <td>18.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1682</td>\n",
-       "      <td>research</td>\n",
-       "      <td>Sydney, Australia</td>\n",
-       "      <td>11.35</td>\n",
+       "      <td>653</td>\n",
+       "      <td>lecture</td>\n",
+       "      <td>Paris, France</td>\n",
+       "      <td>15.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1703</td>\n",
-       "      <td>consulting</td>\n",
-       "      <td>London, England</td>\n",
-       "      <td>13.91</td>\n",
+       "      <td>930</td>\n",
+       "      <td>lecture</td>\n",
+       "      <td>Mumbai, India</td>\n",
+       "      <td>17.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1522</td>\n",
+       "      <td>340</td>\n",
        "      <td>consulting</td>\n",
-       "      <td>Paris, France</td>\n",
-       "      <td>10.05</td>\n",
+       "      <td>Munich, Germany</td>\n",
+       "      <td>12.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>263</td>\n",
-       "      <td>research</td>\n",
-       "      <td>Mumbai, India</td>\n",
-       "      <td>18.87</td>\n",
+       "      <td>1658</td>\n",
+       "      <td>consulting</td>\n",
+       "      <td>Madrid, Spain</td>\n",
+       "      <td>17.87</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   duration_mins  work_types          locations  hour_rates\n",
-       "0           1645     lecture      Madrid, Spain       18.49\n",
-       "1           1682    research  Sydney, Australia       11.35\n",
-       "2           1703  consulting    London, England       13.91\n",
-       "3           1522  consulting      Paris, France       10.05\n",
-       "4            263    research      Mumbai, India       18.87"
+       "   duration_mins  work_types        locations  hour_rates\n",
+       "0            555     lecture    Paris, France       18.42\n",
+       "1            653     lecture    Paris, France       15.35\n",
+       "2            930     lecture    Mumbai, India       17.69\n",
+       "3            340  consulting  Munich, Germany       12.71\n",
+       "4           1658  consulting    Madrid, Spain       17.87"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2099,31 +2099,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Beijing, China</th>\n",
-       "      <td>7359</td>\n",
+       "      <td>4686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>London, England</th>\n",
-       "      <td>8367</td>\n",
+       "      <td>6928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Madrid, Spain</th>\n",
-       "      <td>4703</td>\n",
+       "      <td>4914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mumbai, India</th>\n",
-       "      <td>6462</td>\n",
+       "      <td>15788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Munich, Germany</th>\n",
-       "      <td>2571</td>\n",
+       "      <td>4562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Paris, France</th>\n",
-       "      <td>4808</td>\n",
+       "      <td>5561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sydney, Australia</th>\n",
-       "      <td>9623</td>\n",
+       "      <td>6753</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2132,16 +2132,16 @@
       "text/plain": [
        "                   duration_mins\n",
        "locations                       \n",
-       "Beijing, China              7359\n",
-       "London, England             8367\n",
-       "Madrid, Spain               4703\n",
-       "Mumbai, India               6462\n",
-       "Munich, Germany             2571\n",
-       "Paris, France               4808\n",
-       "Sydney, Australia           9623"
+       "Beijing, China              4686\n",
+       "London, England             6928\n",
+       "Madrid, Spain               4914\n",
+       "Mumbai, India              15788\n",
+       "Munich, Germany             4562\n",
+       "Paris, France               5561\n",
+       "Sydney, Australia           6753"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2207,27 +2207,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>consulting</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>10.05</td>\n",
-       "      <td>19.21</td>\n",
-       "      <td>3.230152</td>\n",
-       "      <td>13.983333</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>10.86</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>2.482536</td>\n",
+       "      <td>14.358095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lecture</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>10.29</td>\n",
-       "      <td>19.72</td>\n",
-       "      <td>3.225029</td>\n",
-       "      <td>15.642917</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>10.14</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>2.967810</td>\n",
+       "      <td>15.255556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>research</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>10.89</td>\n",
-       "      <td>18.87</td>\n",
-       "      <td>2.602754</td>\n",
-       "      <td>14.557143</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.60</td>\n",
+       "      <td>19.88</td>\n",
+       "      <td>2.894519</td>\n",
+       "      <td>16.597273</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2236,12 +2236,12 @@
       "text/plain": [
        "            count_nonzero   amin   amax       std       mean\n",
        "work_types                                                  \n",
-       "consulting           12.0  10.05  19.21  3.230152  13.983333\n",
-       "lecture              24.0  10.29  19.72  3.225029  15.642917\n",
-       "research             14.0  10.89  18.87  2.602754  14.557143"
+       "consulting           21.0  10.86  19.63  2.482536  14.358095\n",
+       "lecture              18.0  10.14  19.63  2.967810  15.255556\n",
+       "research             11.0  10.60  19.88  2.894519  16.597273"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2275,153 +2275,67 @@
      "output_type": "stream",
      "text": [
       "('Beijing, China',     duration_mins  work_types       locations  hour_rates\n",
-      "5             233  consulting  Beijing, China       10.93\n",
-      "7             975  consulting  Beijing, China       15.52\n",
-      "9             950  consulting  Beijing, China       14.68\n",
-      "12           1689     lecture  Beijing, China       11.99\n",
-      "16           1308     lecture  Beijing, China       13.89\n",
-      "19             27     lecture  Beijing, China       17.70\n",
-      "34           1663     lecture  Beijing, China       19.19\n",
-      "40            419    research  Beijing, China       14.22\n",
-      "42             95     lecture  Beijing, China       14.00)\n",
+      "14            565     lecture  Beijing, China       19.54\n",
+      "28           1675  consulting  Beijing, China       15.09\n",
+      "38            837  consulting  Beijing, China       10.93\n",
+      "43           1609    research  Beijing, China       18.84)\n",
       "('London, England',     duration_mins  work_types        locations  hour_rates\n",
-      "2            1703  consulting  London, England       13.91\n",
-      "8            1176    research  London, England       11.65\n",
-      "15            504     lecture  London, England       15.97\n",
-      "18             10    research  London, England       10.98\n",
-      "25           1037    research  London, England       16.25\n",
-      "33           1158     lecture  London, England       19.72\n",
-      "38           1288     lecture  London, England       10.82\n",
-      "47            616  consulting  London, England       19.21\n",
-      "49            875     lecture  London, England       18.22)\n",
+      "25            710    research  London, England       19.88\n",
+      "31            935  consulting  London, England       16.89\n",
+      "36           1402  consulting  London, England       12.50\n",
+      "37            133     lecture  London, England       14.97\n",
+      "39           1632    research  London, England       14.31\n",
+      "40           1562  consulting  London, England       14.36\n",
+      "47            554     lecture  London, England       12.84)\n",
       "('Madrid, Spain',     duration_mins  work_types      locations  hour_rates\n",
-      "0            1645     lecture  Madrid, Spain       18.49\n",
-      "17           1614  consulting  Madrid, Spain       16.60\n",
-      "23            238     lecture  Madrid, Spain       10.29\n",
-      "32            110     lecture  Madrid, Spain       11.90\n",
-      "36           1096     lecture  Madrid, Spain       18.94)\n",
+      "4            1658  consulting  Madrid, Spain       17.87\n",
+      "27            717    research  Madrid, Spain       19.09\n",
+      "30            816     lecture  Madrid, Spain       16.62\n",
+      "49           1723     lecture  Madrid, Spain       19.63)\n",
       "('Mumbai, India',     duration_mins  work_types      locations  hour_rates\n",
-      "4             263    research  Mumbai, India       18.87\n",
-      "6            1380     lecture  Mumbai, India       19.26\n",
-      "20           1309    research  Mumbai, India       14.55\n",
-      "31           1512     lecture  Mumbai, India       16.25\n",
-      "35            153     lecture  Mumbai, India       18.44\n",
-      "45           1737    research  Mumbai, India       16.41\n",
-      "46            108  consulting  Mumbai, India       18.62)\n",
-      "('Munich, Germany',     duration_mins work_types        locations  hour_rates\n",
-      "13            157   research  Munich, Germany       13.31\n",
-      "21            861    lecture  Munich, Germany       19.41\n",
-      "27            511    lecture  Munich, Germany       11.49\n",
-      "39           1042   research  Munich, Germany       16.92)\n",
+      "2             930     lecture  Mumbai, India       17.69\n",
+      "5            1715    research  Mumbai, India       13.45\n",
+      "7             100     lecture  Mumbai, India       18.93\n",
+      "8            1719  consulting  Mumbai, India       10.88\n",
+      "11            651  consulting  Mumbai, India       11.94\n",
+      "13           1201     lecture  Mumbai, India       11.95\n",
+      "15           1769  consulting  Mumbai, India       13.65\n",
+      "17           1053  consulting  Mumbai, India       12.32\n",
+      "20           1014  consulting  Mumbai, India       16.73\n",
+      "22           1698     lecture  Mumbai, India       11.71\n",
+      "24           1771  consulting  Mumbai, India       12.22\n",
+      "42            541    research  Mumbai, India       18.98\n",
+      "44           1626     lecture  Mumbai, India       17.49)\n",
+      "('Munich, Germany',     duration_mins  work_types        locations  hour_rates\n",
+      "3             340  consulting  Munich, Germany       12.71\n",
+      "6             270    research  Munich, Germany       16.30\n",
+      "9             970     lecture  Munich, Germany       14.03\n",
+      "10            573  consulting  Munich, Germany       14.23\n",
+      "12            499  consulting  Munich, Germany       19.63\n",
+      "18            186  consulting  Munich, Germany       16.64\n",
+      "35           1711    research  Munich, Germany       16.95\n",
+      "46             13     lecture  Munich, Germany       15.65)\n",
       "('Paris, France',     duration_mins  work_types      locations  hour_rates\n",
-      "3            1522  consulting  Paris, France       10.05\n",
-      "11            979    research  Paris, France       14.62\n",
-      "26            372    research  Paris, France       17.04\n",
-      "28           1262     lecture  Paris, France       18.66\n",
-      "30            534     lecture  Paris, France       18.03\n",
-      "48            139     lecture  Paris, France       12.73)\n",
+      "0             555     lecture  Paris, France       18.42\n",
+      "1             653     lecture  Paris, France       15.35\n",
+      "21            244  consulting  Paris, France       15.60\n",
+      "23            679     lecture  Paris, France       11.74\n",
+      "26            994  consulting  Paris, France       16.65\n",
+      "32            452    research  Paris, France       18.55\n",
+      "33           1278    research  Paris, France       15.62\n",
+      "45            706     lecture  Paris, France       12.74)\n",
       "('Sydney, Australia',     duration_mins  work_types          locations  hour_rates\n",
-      "1            1682    research  Sydney, Australia       11.35\n",
-      "10           1266     lecture  Sydney, Australia       14.62\n",
-      "14           1081  consulting  Sydney, Australia       11.60\n",
-      "22            791  consulting  Sydney, Australia       15.54\n",
-      "24            158     lecture  Sydney, Australia       12.09\n",
-      "29           1126  consulting  Sydney, Australia       10.40\n",
-      "37           1302     lecture  Sydney, Australia       13.33\n",
-      "41            164    research  Sydney, Australia       10.89\n",
-      "43            391  consulting  Sydney, Australia       10.74\n",
-      "44           1662    research  Sydney, Australia       16.74)\n"
+      "16           1716    research  Sydney, Australia       10.60\n",
+      "19           1522     lecture  Sydney, Australia       15.16\n",
+      "29           1525     lecture  Sydney, Australia       10.14\n",
+      "34            164  consulting  Sydney, Australia       10.86\n",
+      "41            421  consulting  Sydney, Australia       14.36\n",
+      "48           1405  consulting  Sydney, Australia       15.46)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>duration_mins</th>\n",
-       "      <th>hour_rates</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>locations</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Beijing, China</th>\n",
-       "      <td>817.67</td>\n",
-       "      <td>14.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>London, England</th>\n",
-       "      <td>929.67</td>\n",
-       "      <td>15.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Madrid, Spain</th>\n",
-       "      <td>940.60</td>\n",
-       "      <td>15.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mumbai, India</th>\n",
-       "      <td>923.14</td>\n",
-       "      <td>17.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Munich, Germany</th>\n",
-       "      <td>642.75</td>\n",
-       "      <td>15.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Paris, France</th>\n",
-       "      <td>801.33</td>\n",
-       "      <td>15.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sydney, Australia</th>\n",
-       "      <td>962.30</td>\n",
-       "      <td>12.73</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   duration_mins  hour_rates\n",
-       "locations                                   \n",
-       "Beijing, China            817.67       14.68\n",
-       "London, England           929.67       15.19\n",
-       "Madrid, Spain             940.60       15.24\n",
-       "Mumbai, India             923.14       17.49\n",
-       "Munich, Germany           642.75       15.28\n",
-       "Paris, France             801.33       15.19\n",
-       "Sydney, Australia         962.30       12.73"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "itinery_df.groupby('locations')\n",
+    "grouped = itinery_df.groupby('locations')\n",
     "for group in grouped:\n",
     "    print(group)"
    ]
